<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="notification_button">Status</string>
    <string name="title_activity_detail">Download Status</string>
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="loadApp">LoadApp - Current Repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP Client for Android and Java by Square, Inc</string>
    <string name="selectFile">Please Select File to Download</string>
    <string name="fileName">File Name :</string>
    <string name="status">Status :</string>
    <string name="ok">Done</string>

</resources>