<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/onehundredeighty"
            android:background="@color/colorAccent"
            android:src="@drawable/download_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radio_glide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten"
                android:text="@string/glide"
                android:textSize="@dimen/twenty" />

            <RadioButton
                android:id="@+id/radio_udacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten"
                android:text="@string/loadApp"
                android:textSize="@dimen/twenty" />

            <RadioButton
                android:id="@+id/radio_retrofit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten"
                android:text="@string/retrofit"
                android:textSize="@dimen/twenty" />

        </RadioGroup>

        <com.example.loadapp.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/sixty"
            android:layout_margin="@dimen/twenty"
            app:btnColor="@color/colorPrimary"
            app:circleColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>