<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotationX="1"
        app:layoutDescription="@xml/motion"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        tools:showIn="@layout/activity_detail">

        <TextView
            android:id="@+id/tv_fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty"
            android:layout_marginTop="@dimen/fifty"
            android:text="@string/fileName"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fileName"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty"
            android:layout_marginTop="@dimen/fifty"
            android:layout_marginEnd="@dimen/twenty"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_fileName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty"
            android:layout_marginTop="@dimen/hundred"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fileName" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/twenty"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_status"
            app:layout_constraintStart_toStartOf="@+id/fileName" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_marginStart="@dimen/twenty"
            android:layout_marginEnd="@dimen/twenty"
            android:layout_marginBottom="@dimen/thirty"
            android:background="@color/colorPrimary"
            android:textAllCaps="false"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>